Fixed collapsing navbar but title font size needs more work

--- a/siteone/styles.css
+++ b/siteone/styles.css
@@ -33,12 +33,11 @@ body {
     font-size: 16px;
     font-weight: 900;
     padding-top: 25px;
-    
 }
 
 .navbar-brand h1 {
     font-family: 'Lora', serif;
-    font-size: 1.75em;
+    font-size: 24px;
     text-transform: uppercase;
     text-shadow: 1px 1px 1px rgb(84, 78, 78);
     text-decoration: none;
@@ -46,6 +45,7 @@ body {
     font-weight: bold;
     margin-top: 15px;
     line-height: 1;
+    display: flex;
 }
 
 a {
@@ -72,18 +72,18 @@ a {
     color: #61122f;
     text-decoration: none;
     text-align: center;
-    font-size: 1.1em;
-    
+}
+
+#name {
+    font-size: 1em;
 }
 
 #nav-list li {
     padding: 20px;
+    font-size: 1.1em;
     
 }
 
-#nav-list {
-    margin-left: 15px;
-}
 
 
 
